# tribeca-insights

./: .flake8  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  chatgpt_guidelines.md  cleanup.sh  install_certs.sh  pyproject.toml  pyrightconfig.json  update.sh
.github/workflows/: ci.yml  codeql.yml
docs/: playwright.md
docs/examples/: project_DOMAIN_template.json
scripts/: main.py  split_crawler.py  validate_structure.py
tribeca_insights/: __init__.py  cli.py  config.py  crawler.py  logging_utils.py  playwright_crawler.py  setup.cfg  storage.py  text_utils.py
tribeca_insights/exporters/: __init__.py  constants.py  csv.py  json.py  markdown.py
tribeca_insights/management/commands/: crawl_site.py
tribeca_insights/tests/: test_cli.py  test_config.py  test_crawler.py  test_exporters.py  test_playwright_crawler.py  test_playwright_crawler_new.py  test_project_json.py  test_storage.py  test_storage_setup.py  test_text_utils.py
tribecadigital.com.br/: external_urls.md
