[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tribeca-insights"
version = "0.1.0"
description = "Modular Python CLI for content extraction, term frequency analysis, and SEO reporting"
readme = "README.md"
authors = [{ name="Flávio Paulino" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "requests>=2.28",
  "beautifulsoup4>=4.12",
  "pandas>=2.0",
  "python-slugify>=8.0",
  "nltk>=3.7",
  "certifi>=2023.7"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
"Homepage"   = "https://github.com/tribecabrasil/tribeca-insights"
"Repository" = "https://github.com/tribecabrasil/tribeca-insights.git"


[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pre-commit>=2.20",
  "mypy>=0.991",
  "flake8>=6.0",
  "pyright>=1.1",
  "black>=23.9",
  "isort>=5.0"
]

[project.entry-points.console_scripts]
tribeca-insights = "tribeca_insights.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tribeca_insights*"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true